--- a/metadata/pom.xml
+++ b/metadata/pom.xml
@@ -6,4 +6,11 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>metadata</artifactId>
+  <dependencies>
+        <dependency>
+            <groupId>com.flipkart.portkey</groupId>
+            <artifactId>common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
