--- a/persistencelayer/pom.xml
+++ b/persistencelayer/pom.xml
@@ -13,5 +13,10 @@
 			<artifactId>common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.hazelcast</groupId>
+			<artifactId>hazelcast</artifactId>
+			<version>3.3.3</version>
+		</dependency>
 	</dependencies>
 </project>
