--- a/redis/pom.xml
+++ b/redis/pom.xml
@@ -7,6 +7,20 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>redis</artifactId>
+	<properties>
+        <maven.compiler.target>1.6</maven.compiler.target>
+        <maven.compiler.source>1.6</maven.compiler.source>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <spring.version>3.1.2.RELEASE</spring.version>
+        <slf4j.version>1.7.5</slf4j.version>
+        <logback.version>1.0.1</logback.version>
+        <jaffa.version>1.0.7-SNAPSHOT</jaffa.version>
+        <communique.version>0.1.3</communique.version>
+        <jdk.version>1.6</jdk.version>
+        <maven-antrun-plugin.version>1.3</maven-antrun-plugin.version>
+        <maven-compiler-plugin.version>2.0.2</maven-compiler-plugin.version>
+        <maven-jar-plugin.version>2.2</maven-jar-plugin.version>
+    </properties>
 	<dependencies>
 		<dependency>
 			<groupId>com.flipkart.portkey</groupId>
@@ -35,5 +49,10 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+        <dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-beans</artifactId>
+    <version>${spring.version}</version>
+</dependency>
 	</dependencies>
 </project>
