--- a/persistence-layer/pom.xml
+++ b/persistence-layer/pom.xml
@@ -20,6 +20,7 @@
 		<maven-antrun-plugin.version>1.3</maven-antrun-plugin.version>
 		<maven-compiler-plugin.version>2.0.2</maven-compiler-plugin.version>
 		<maven-jar-plugin.version>2.2</maven-jar-plugin.version>
+		<powermock.version>1.6.0</powermock.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -61,6 +62,35 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymock</artifactId>
+			<version>3.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-module-junit4</artifactId>
+			<version>${powermock.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.powermock</groupId>
+			<artifactId>powermock-api-mockito</artifactId>
+			<version>${powermock.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.9.5</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
