--- a/redis/pom.xml
+++ b/redis/pom.xml
@@ -8,19 +8,20 @@
 	</parent>
 	<artifactId>redis</artifactId>
 	<properties>
-        <maven.compiler.target>1.6</maven.compiler.target>
-        <maven.compiler.source>1.6</maven.compiler.source>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring.version>3.1.2.RELEASE</spring.version>
-        <slf4j.version>1.7.5</slf4j.version>
-        <logback.version>1.0.1</logback.version>
-        <jaffa.version>1.0.7-SNAPSHOT</jaffa.version>
-        <communique.version>0.1.3</communique.version>
-        <jdk.version>1.6</jdk.version>
-        <maven-antrun-plugin.version>1.3</maven-antrun-plugin.version>
-        <maven-compiler-plugin.version>2.0.2</maven-compiler-plugin.version>
-        <maven-jar-plugin.version>2.2</maven-jar-plugin.version>
-    </properties>
+		<maven.compiler.target>1.6</maven.compiler.target>
+		<maven.compiler.source>1.6</maven.compiler.source>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring.version>3.1.2.RELEASE</spring.version>
+		<slf4j.version>1.7.5</slf4j.version>
+		<logback.version>1.0.1</logback.version>
+		<jaffa.version>1.0.7-SNAPSHOT</jaffa.version>
+		<communique.version>0.1.3</communique.version>
+		<jdk.version>1.6</jdk.version>
+		<maven-antrun-plugin.version>1.3</maven-antrun-plugin.version>
+		<maven-compiler-plugin.version>2.0.2</maven-compiler-plugin.version>
+		<maven-jar-plugin.version>2.2</maven-jar-plugin.version>
+		<powermock.version>1.6.0</powermock.version>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>com.flipkart.portkey</groupId>
@@ -45,14 +46,41 @@
 			<version>1.9.13</version>
 		</dependency>
 		<dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.1</version>
         </dependency>
         <dependency>
-    <groupId>org.springframework</groupId>
-    <artifactId>spring-beans</artifactId>
-    <version>${spring.version}</version>
-</dependency>
+            <groupId>org.easymock</groupId>
+            <artifactId>easymock</artifactId>
+            <version>3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-module-junit4</artifactId>
+            <version>${powermock.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-mockito</artifactId>
+            <version>${powermock.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+        </dependency>
 	</dependencies>
 </project>
