--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,34 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.flipkart.portkey</groupId>
-  <artifactId>portkey</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <name>Portkey</name>
-  <description>Portkey parent project</description>
-  <modules>
-  	<module>common</module>
-  	<module>persistence-layer</module>
-  	<module>rdbms</module>
-    <module>redis</module>
-    <module>example</module>
-    <module>example2</module>
-  </modules>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.flipkart.portkey</groupId>
+	<artifactId>portkey</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<name>Portkey</name>
+	<description>Portkey parent project</description>
+	<repositories>
+        <repository>
+            <id>clojars</id>
+            <name>Clojars repository</name>
+            <url>https://clojars.org/repo</url>
+        </repository>
+    </repositories>
+	<modules>
+		<module>common</module>
+		<module>persistence-layer</module>
+		<module>rdbms</module>
+		<module>redis</module>
+		<module>example</module>
+	</modules>
+	<properties>
+		<portkey.version>0.0.1-SNAPSHOT</portkey.version>
+		<maven.compiler.target>1.6</maven.compiler.target>
+		<maven.compiler.source>1.6</maven.compiler.source>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring.version>4.1.4.RELEASE</spring.version>
+		<log4j.version>1.2.17</log4j.version>
+		<hazelcast.version>3.4</hazelcast.version>
+		<c3p0.version>0.9.1</c3p0.version>
+	</properties>
 </project>
