--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,19 @@
 	<name>Portkey</name>
 	<description>Portkey parent project</description>
 	<repositories>
-        <repository>
-            <id>clojars</id>
-            <name>Clojars repository</name>
-            <url>https://clojars.org/repo</url>
-        </repository>
-    </repositories>
+		<repository>
+			<id>clojars</id>
+			<name>Clojars repository</name>
+			<url>https://clojars.org/repo</url>
+		</repository>
+	</repositories>
+	<distributionManagement>
+		<repository>
+			<id>clojars</id>
+			<name>Clojars repository</name>
+			<url>https://clojars.org/repo</url>
+		</repository>
+	</distributionManagement>
 	<modules>
 		<module>common</module>
 		<module>persistence-layer</module>
