--- a/common/pom.xml
+++ b/common/pom.xml
@@ -23,5 +23,10 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.3.2</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.2</version>
+		</dependency>
 	</dependencies>
 </project>
