--- a/example/src/main/resources/project.properties
+++ b/example/src/main/resources/project.properties
@@ -1,4 +1,5 @@
 #Rdbms config
+RDBMS.SHARD1.MASTER.DRIVER_CLASS=${rdbms.shard1.master.driver.class}
 RDBMS.SHARD1.MASTER.JDBC_URL=${rdbms.shard1.master.jdbc_url}
 RDBMS.SHARD1.MASTER.USER=${rdbms.shard1.master.user}
 RDBMS.SHARD1.MASTER.PASSWORD=${rdbms.shard1.master.password}
@@ -14,6 +15,10 @@ C3P0_MAX_IDLE_TIME=${c3p0_max_idle_time}
 C3P0_MAX_POOL_SIZE=${c3p0_max_pool_size}
 C3P0_MAX_STATEMENTS=${c3p0_max_statements}
 C3P0_MIN_POOL_SIZE=${c3p0_min_pool_size}
+C3P0_TEST_CONNECTION_ON_CHECKIN=${c3p0_test_connection_on_checkin}
+C3P0_IDLE_CONNECTION_TEST_PERIOD=${c3p0_idle_connection_test_period}
+C3P0_PREFERRED_TEST_QUERY=${c3p0_preferred_test_query}
+
 
 #Redis config
 REDIS.SHARD1.HOST=${redis.shard1.host}
