--- a/common/pom.xml
+++ b/common/pom.xml
@@ -28,5 +28,10 @@
 			<artifactId>junit</artifactId>
 			<version>4.8.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.hazelcast</groupId>
+			<artifactId>hazelcast</artifactId>
+			<version>${hazelcast.version}</version>
+		</dependency>
 	</dependencies>
 </project>
