--- a/example/pom.xml
+++ b/example/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.flipkart.portkey</groupId>
 		<artifactId>portkey</artifactId>
-		<version>0.0.6-SNAPSHOT</version>
+		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>example</artifactId>
 	<name>Portkey Example</name>
@@ -13,23 +13,23 @@
 		<dependency>
 			<groupId>com.flipkart.portkey</groupId>
 			<artifactId>persistence-layer</artifactId>
-			<version>0.0.6-SNAPSHOT</version>
+			<version>${portkey.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.flipkart.portkey</groupId>
 			<artifactId>rdbms</artifactId>
-			<version>0.0.6-SNAPSHOT</version>
+			<version>${portkey.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.flipkart.portkey</groupId>
 			<artifactId>redis</artifactId>
-			<version>0.0.6-SNAPSHOT</version>
+			<version>${portkey.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>c3p0</groupId>
 			<artifactId>c3p0</artifactId>
 			<version>${c3p0.version}</version>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
