--- a/rdbms/pom.xml
+++ b/rdbms/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.flipkart.portkey</groupId>
 		<artifactId>portkey</artifactId>
-		<version>0.0.6-SNAPSHOT</version>
+		<version>0.1.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>rdbms</artifactId>
 
@@ -12,7 +12,7 @@
 		<dependency>
 			<groupId>com.flipkart.portkey</groupId>
 			<artifactId>common</artifactId>
-			<version>0.0.6-SNAPSHOT</version>
+			<version>${portkey.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-beanutils</groupId>
@@ -29,7 +29,6 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.34</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
