Remove hazelcast dependency, fix update query issue for special values

--- a/example/src/main/resources/project.properties
+++ b/example/src/main/resources/project.properties
@@ -3,10 +3,12 @@ RDBMS.1.MASTER.DRIVER_CLASS=${rdbms.1.master.driver.class}
 RDBMS.1.MASTER.JDBC_URL=${rdbms.1.master.jdbc_url}
 RDBMS.1.MASTER.USER=${rdbms.1.master.user}
 RDBMS.1.MASTER.PASSWORD=${rdbms.1.master.password}
+RDBMS.1.MASTER.DATA_SOURCE_NAME=${rdbms.1.master.data_source_name}
 
 RDBMS.1.SLAVE1.JDBC_URL=${rdbms.1.slave.jdbc_url}
 RDBMS.1.SLAVE1.USER=${rdbms.1.slave.user}
 RDBMS.1.SLAVE1.PASSWORD=${rdbms.1.slave.password}
+RDBMS.1.SLAVE1.DATA_SOURCE_NAME=${rdbms.1.slave.data_source_name}
 
 #Redis 1 config
 REDIS.1.HOST=${redis.1.host}
@@ -19,22 +21,26 @@ RDBMS.2.SHARD1.MASTER.DRIVER_CLASS=${rdbms.2.shard1.master.driver.class}
 RDBMS.2.SHARD1.MASTER.JDBC_URL=${rdbms.2.shard1.master.jdbc_url}
 RDBMS.2.SHARD1.MASTER.USER=${rdbms.2.shard1.master.user}
 RDBMS.2.SHARD1.MASTER.PASSWORD=${rdbms.2.shard1.master.password}
+RDBMS.2.SHARD1.MASTER.DATA_SOURCE_NAME=${rdbms.2.shard1.master.data_source_name}
 
 RDBMS.2.SHARD1.SLAVE1.DRIVER_CLASS=${rdbms.2.shard1.master.driver.class}
 RDBMS.2.SHARD1.SLAVE1.JDBC_URL=${rdbms.2.shard1.slave.jdbc_url}
 RDBMS.2.SHARD1.SLAVE1.USER=${rdbms.2.shard1.slave.user}
 RDBMS.2.SHARD1.SLAVE1.PASSWORD=${rdbms.2.shard1.slave.password}
+RDBMS.2.SHARD1.SLAVE1.DATA_SOURCE_NAME=${rdbms.2.shard1.slave.data_source_name}
 
 #Rdbms shard2 config
 RDBMS.2.SHARD2.MASTER.DRIVER_CLASS=${rdbms.2.shard2.master.driver.class}
 RDBMS.2.SHARD2.MASTER.JDBC_URL=${rdbms.2.shard2.master.jdbc_url}
 RDBMS.2.SHARD2.MASTER.USER=${rdbms.2.shard2.master.user}
 RDBMS.2.SHARD2.MASTER.PASSWORD=${rdbms.2.shard2.master.password}
+RDBMS.2.SHARD2.MASTER.DATA_SOURCE_NAME=${rdbms.2.shard2.master.data_source_name}
 
 RDBMS.2.SHARD2.SLAVE1.DRIVER_CLASS=${rdbms.2.shard1.master.driver.class}
 RDBMS.2.SHARD2.SLAVE1.JDBC_URL=${rdbms.2.shard2.slave.jdbc_url}
 RDBMS.2.SHARD2.SLAVE1.USER=${rdbms.2.shard2.slave.user}
 RDBMS.2.SHARD2.SLAVE1.PASSWORD=${rdbms.2.shard2.slave.password}
+RDBMS.2.SHARD2.SLAVE1.DATA_SOURCE_NAME=${rdbms.2.shard2.slave.data_source_name}
 
 #Redis 2 config
 REDIS.2.HOST=${redis.2.host}
