--- a/pom.xml
+++ b/pom.xml
@@ -1,49 +1,49 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.flipkart.portkey</groupId>
-	<artifactId>portkey</artifactId>
-	<version>0.1.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
-	<name>Portkey</name>
-	<description>Portkey parent project</description>
-	<repositories>
-		<repository>
-			<id>clojars</id>
-			<name>Clojars repository</name>
-			<url>https://clojars.org/repo</url>
-		</repository>
-	</repositories>
-	<distributionManagement>
-		<repository>
-			<id>ops-build-2</id>
-			<name>ops-build-2-releases</name>
-			<url>http:/artifactory.nm.flipkart.com:8081/artifactory/libs-release-local</url>
-		</repository>
-		<!-- Publish the versioned releases here -->
-		<snapshotRepository>
-			<id>ops-build-2</id>
-			<name>ops-build-2-snapshots</name>
-			<url>http://artifactory.nm.flipkart.com:8081/artifactory/libs-snapshot-local</url>
-		</snapshotRepository>
-	</distributionManagement>
-	<modules>
-		<module>common</module>
-		<module>persistence-layer</module>
-		<module>rdbms</module>
-		<module>redis</module>
-		<module>example</module>
-	</modules>
-	<properties>
-		<portkey.version>0.1.1-SNAPSHOT</portkey.version>
-		<maven.compiler.target>1.6</maven.compiler.target>
-		<maven.compiler.source>1.6</maven.compiler.source>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<spring.version>4.1.4.RELEASE</spring.version>
-		<log4j.version>1.2.17</log4j.version>
-		<junit.version>4.8.2</junit.version>
-		<hazelcast.version>3.4</hazelcast.version>
-		<c3p0.version>0.9.1</c3p0.version>
-		<powermock.version>1.6.0</powermock.version>
-	</properties>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.flipkart.portkey</groupId>
+    <artifactId>portkey</artifactId>
+    <version>0.1.2-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <name>Portkey</name>
+    <description>Portkey parent project</description>
+    <repositories>
+        <repository>
+            <id>clojars</id>
+            <name>Clojars repository</name>
+            <url>https://clojars.org/repo</url>
+        </repository>
+    </repositories>
+    <distributionManagement>
+        <repository>
+            <id>ops-build-2</id>
+            <name>ops-build-2-releases</name>
+            <url>http:/artifactory.nm.flipkart.com:8081/artifactory/libs-release-local</url>
+        </repository>
+        <!-- Publish the versioned releases here -->
+        <snapshotRepository>
+            <id>ops-build-2</id>
+            <name>ops-build-2-snapshots</name>
+            <url>http://artifactory.nm.flipkart.com:8081/artifactory/libs-snapshot-local</url>
+        </snapshotRepository>
+    </distributionManagement>
+    <modules>
+        <module>common</module>
+        <module>persistence-layer</module>
+        <module>rdbms</module>
+        <module>redis</module>
+        <module>example</module>
+    </modules>
+    <properties>
+        <portkey.version>0.1.2-SNAPSHOT</portkey.version>
+        <maven.compiler.target>1.6</maven.compiler.target>
+        <maven.compiler.source>1.6</maven.compiler.source>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <spring.version>4.1.4.RELEASE</spring.version>
+        <slf4j.version>1.7.12</slf4j.version>
+        <junit.version>4.8.2</junit.version>
+        <hazelcast.version>3.4</hazelcast.version>
+        <c3p0.version>0.9.1</c3p0.version>
+        <powermock.version>1.6.0</powermock.version>
+    </properties>
 </project>
