--- a/example/src/main/resources/project.properties
+++ b/example/src/main/resources/project.properties
@@ -48,6 +48,22 @@ REDIS.2.PORT=${redis.2.port}
 REDIS.2.DATABASE=${redis.2.database}
 REDIS.2.PASSWORD=${redis.2.password}
 
+
+
+#test_db config
+RDBMS.TEST_DB.MASTER.DRIVER_CLASS=${rdbms.test_db.master.driver.class}
+RDBMS.TEST_DB.MASTER.JDBC_URL=${rdbms.test_db.master.jdbc_url}
+RDBMS.TEST_DB.MASTER.USER=${rdbms.test_db.master.user}
+RDBMS.TEST_DB.MASTER.PASSWORD=${rdbms.test_db.master.password}
+RDBMS.TEST_DB.MASTER.DATA_SOURCE_NAME=${rdbms.test_db.master.data_source_name}
+
+RDBMS.TEST_DB.SLAVE1.JDBC_URL=${rdbms.test_db.slave.jdbc_url}
+RDBMS.TEST_DB.SLAVE1.USER=${rdbms.test_db.slave.user}
+RDBMS.TEST_DB.SLAVE1.PASSWORD=${rdbms.test_db.slave.password}
+RDBMS.TEST_DB.SLAVE1.DATA_SOURCE_NAME=${rdbms.test_db.slave.data_source_name}
+
+
+
 #Redis connection pool config
 REDIS_POOL_CONFIG.BLOCK_WHEN_EXHAUSTED=${redis_pool_config.block_when_exhausted}
 REDIS_POOL_CONFIG.JMX_ENABLED=${redis_pool_config.jmx_enabled}
