--- a/example/pom.xml
+++ b/example/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.flipkart.portkey</groupId>
 		<artifactId>portkey</artifactId>
-		<version>0.3.0-SNAPSHOT</version>
+		<version>0.4.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>example</artifactId>
 	<name>Portkey Example</name>
@@ -40,7 +40,27 @@
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.12</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>log4j-over-slf4j</artifactId>
+			<version>${log4j-over-slf4j.version}</version>
+		</dependency>
 	</dependencies>
+
+	<properties>
+		<log4j.version>2.3</log4j.version>
+		<log4j-over-slf4j.version>1.7.12</log4j-over-slf4j.version>
+	</properties>
 
 	<build>
 		<sourceDirectory>src/main/java</sourceDirectory>
