Add stopwatch, version++

--- a/persistence-layer/pom.xml
+++ b/persistence-layer/pom.xml
@@ -28,5 +28,10 @@
 			<artifactId>spring-beans</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.perf4j</groupId>
+			<artifactId>perf4j</artifactId>
+			<version>0.9.16</version>
+		</dependency>
 	</dependencies>
 </project>
