--- a/rdbms/pom.xml
+++ b/rdbms/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.flipkart.portkey</groupId>
 		<artifactId>portkey</artifactId>
-		<version>0.4.2-SNAPSHOT</version>
+		<version>0.4.3-SNAPSHOT</version>
 	</parent>
 	<artifactId>rdbms</artifactId>
 
@@ -43,6 +43,11 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.perf4j</groupId>
+			<artifactId>perf4j</artifactId>
+			<version>0.9.16</version>
 		</dependency>
 	</dependencies>
 </project>
